Bug #1799 - ActivityNotFoundException when clicking Terms of Service

--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -121,7 +121,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">Crea un compte</string>
     <string name="name_text" context="Name of the user">nom</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Estic d\'acord amb les &lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt;Condicions de Servei&lt;/a&gt; de MEGA</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Estic d\'acord amb les Condicions de Servei de MEGA</string>
     <string name="already_account" context="Does the user already have a MEGA account">Ja tens un compte?</string>
     
     <string name="create_account_no_terms" context="warning dialog">Has d\'acceptar les nostres Condicions de Servei.</string>
