--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -135,7 +135,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">צור חשבון</string>
     <string name="name_text" context="Name of the user">שם</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">אני מסכים עם &lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt;תנאי השימוש&lt;/a&gt; של MEGA</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">אני מסכים עם תנאי השימוש של MEGA</string>
     <string name="already_account" context="Does the user already have a MEGA account">כבר יש לך חשבון?</string>
     
     <string name="create_account_no_terms" context="warning dialog">הינך חייב להסכים לתנאי השירות שלנו.</string>
