--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -121,7 +121,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">Buat akaun</string>
     <string name="name_text" context="Name of the user">nama</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Saya bersetuju dengan &lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt;Syarat Perkhidmatan&lt;/a&gt; MEGA</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Saya bersetuju dengan Syarat Perkhidmatan MEGA</string>
     <string name="already_account" context="Does the user already have a MEGA account">Sudah mempunyai akaun?</string>
     
     <string name="create_account_no_terms" context="warning dialog">Anda mesti menerima Syarat Perkhidmatan kami.</string>
