--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -128,7 +128,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">Creează cont</string>
     <string name="name_text" context="Name of the user">nume</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Sunt de acord cu &lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt;termenii serviciului&lt;/a&gt; MEGA</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Sunt de acord cu termenii serviciului MEGA</string>
     <string name="already_account" context="Does the user already have a MEGA account">Ai deja un cont?</string>
     
     <string name="create_account_no_terms" context="warning dialog">Trebuie să accepţi termenii serviciului nostru.</string>
