--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -121,7 +121,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">Skapa konto</string>
     <string name="name_text" context="Name of the user">namn</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Jag håller med MEGA\'s &lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt;Terms of Service&lt;/a&gt;</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Jag håller med MEGA\'s Terms of Service</string>
     <string name="already_account" context="Does the user already have a MEGA account">Har du redan ett konto?</string>
     
     <string name="create_account_no_terms" context="warning dialog">Du måste acceptera våra användarvillkor</string>
