--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -149,7 +149,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">إنشاء حساب</string>
     <string name="name_text" context="Name of the user">الاسم</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">أنا أتفق معMEGA&lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt; MEGA شروط الخدمة &lt;/a&gt;</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">أنا أتفق مع MEGA شروط الخدمة</string>
     <string name="already_account" context="Does the user already have a MEGA account">هل لديك حساب؟</string>
     
     <string name="create_account_no_terms" context="warning dialog">ينبغي عليك أن تقبل شروط الخدمة.</string>
