--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -121,7 +121,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">Opret konto</string>
     <string name="name_text" context="Name of the user">navn</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Jeg er enig med MEGAs &lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt;Brugerbetingelser&lt;/a&gt;</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Jeg er enig med MEGAs Brugerbetingelser</string>
     <string name="already_account" context="Does the user already have a MEGA account">Har du allerede en konto?</string>
     
     <string name="create_account_no_terms" context="warning dialog">Du skal acceptere vores brugerbetingelser</string>
