--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -121,7 +121,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">アカウントを作成する</string>
     <string name="name_text" context="Name of the user">氏名</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">私は、MEGAの&lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt;利用規約&lt;/a&gt;に同意します。</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">私は、MEGAの 利用規約 に同意します。</string>
     <string name="already_account" context="Does the user already have a MEGA account">もうアカウントをお持ちですか？</string>
     
     <string name="create_account_no_terms" context="warning dialog">利用規約に同意して下さい。</string>
