--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -121,7 +121,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">계정 생성</string>
     <string name="name_text" context="Name of the user">이름</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">메가의 &lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt;이용약관&lt;/a&gt;에 동의합니다</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">메가의 이용약관에 동의합니다</string>
     <string name="already_account" context="Does the user already have a MEGA account">이미 계정이 있으신가요?</string>
     
     <string name="create_account_no_terms" context="warning dialog">우리의 이용 약관에 동의하여야 합니다.</string>
