--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -121,7 +121,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">Maak een account aan</string>
     <string name="name_text" context="Name of the user">naam</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Ik ga akkoord met MEGA\'s &lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt;Servicevoorwaarden&lt;/a&gt;</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Ik ga akkoord met MEGA\'s Servicevoorwaarden</string>
     <string name="already_account" context="Does the user already have a MEGA account">Heb je al een account?</string>
     
     <string name="create_account_no_terms" context="warning dialog">Je moet onze algemene gebruikersvoorwaarden accepteren.</string>
