--- a/res/values-no/strings.xml
+++ b/res/values-no/strings.xml
@@ -121,7 +121,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">Create account</string>
     <string name="name_text" context="Name of the user">name</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">I agree with MEGA\'s &lt;a href=&quot;https://mega.co.nz/mobile_privacy.html&quot;&gt;Terms of Service&lt;/a&gt;</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">I agree with MEGA\'s Terms of Service</string>
     <string name="already_account" context="Does the user already have a MEGA account">Already have an account?</string>
     
     <string name="create_account_no_terms" context="warning dialog">You have to accept our Terms of Service.</string>
