--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -121,7 +121,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">Criar conta</string>
     <string name="name_text" context="Name of the user">nome</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">I aceito os &lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt;Termos de Serviço&lt;/a&gt; do MEGA </string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">I aceito os Termos de Serviço do MEGA </string>
     <string name="already_account" context="Does the user already have a MEGA account">Já tens uma conta?</string>
     
     <string name="create_account_no_terms" context="warning dialog">Tens de aceitar os nossos Termos de Serviço</string>
