--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -121,7 +121,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">Hesap oluştur</string>
     <string name="name_text" context="Name of the user">isim</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">MEGA &lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt;Hizmet Şartları&lt;/a&gt;nı kabul ediyorum</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">MEGA Hizmet Şartları kabul ediyorum</string>
     <string name="already_account" context="Does the user already have a MEGA account">Zaten bir hesabınız var mı?</string>
     
     <string name="create_account_no_terms" context="warning dialog">Hizmet Şartlarımızı kabul etmek zorundasınız.</string>
