--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -162,6 +162,9 @@
 	<string name="tab_incoming_shares" context="Capital letters. Incoming shared folders. The title of a tab">ENTRANTES</string>
 	<string name="tab_outgoing_shares" context="Capital letters. Outgoing shared folders. The title of a tab">SALIENTES</string>
 	
+	<string name="tab_cloud_drive_explorer" context="Capital letters. Incoming shared folders. The title of a tab">DISCO</string>
+	<string name="tab_incoming_shares_explorer" context="Capital letters. Outgoing shared folders. The title of a tab">ENTRANTES</string>
+	
 	<string name="file_browser_empty_cloud_drive" context="message when there are no files in the Cloud Drive">No hay archivos en tu Cloud Drive</string>
 	<string name="file_browser_empty_rubbish_bin" context="message when there are no files in the Rubbish Bin">Vaciar Papelera</string>
 	<string name="file_browser_empty_incoming_shares" context="message when there are no incoming shared folders">No hay carpetas compartidas contigo</string>
