--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -164,6 +164,8 @@
 	
 	<string name="tab_cloud_drive_explorer" context="Capital letters. Incoming shared folders. The title of a tab">DISCO</string>
 	<string name="tab_incoming_shares_explorer" context="Capital letters. Outgoing shared folders. The title of a tab">ENTRANTES</string>
+	<string name="title_incoming_shares_explorer" context="Title of the file explorer in tab InCOMING">Compartidas contigo</string>
+	<string name="choose_folder_explorer" context="Title of the button in Incoming Shares tabs">Elige carpeta</string>
 	
 	<string name="file_browser_empty_cloud_drive" context="message when there are no files in the Cloud Drive">No hay archivos en tu Cloud Drive</string>
 	<string name="file_browser_empty_rubbish_bin" context="message when there are no files in the Rubbish Bin">Vaciar Papelera</string>
