--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name" context="Not translate">MEGA</string>
-    <string name="app_version" context="Not translate">2.0.5</string>
+    <string name="app_version" context="Not translate">2.0.6</string>
     
     <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
     <string name="short_description_text" context="Short description text of the app in the Google Play page of the app">MEGA es Almacenamiento en la Nube con Potenhte Privacidad Contínuamente Activa. 50GB gratis</string>
@@ -117,7 +117,8 @@
     <string name="error_enter_email" context="when the user tries to log in MEGA without typing the email">Por favor, escribe tu correo electrónico</string>
     <string name="error_invalid_email" context="error when logging in to MEGA with an invalid email">Correo electrónico no valido</string>
     <string name="error_enter_password" context="when the user tries to log in MEGA without typing the password">Por favor, introduzca su contraseña</string>
-    <string name="error_server_connection_problem" context="when the user tries to log in to MEGA without a network connection">Hay un problema de conexión. Por favor, inténtelo de nuevo más tarde.</string>
+    <string name="error_server_connection_problem" context="when the user tries to log in to MEGA without a network connection">Hay un problema de conexión. Por favor, inténtelo de nuevo más tarde</string>
+    <string name="error_server_expired_session" context="when the user tries to log in to MEGA without a valid session">Tu sesión ha sido cerrada desde otro dispositivo</string>
     <string name="login_generating_key" context="the first step when logging in is calculate the private and public encryption keys">Calculando las claves de encriptación</string>
     <string name="login_connecting_to_server" context="Message displayed while the app is connecting to a MEGA server">Conectando al servidor</string>
     <string name="error_incorrect_email_or_password" context="Error message when a login attempt fails.">Correo electrónico o contraseña incorrectos. ¿Has confirmado tu cuenta?</string>    
