--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -300,7 +300,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">Pro-Mitgliedschaft</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">Select membership</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">Monatlich oder jährlich wiederholend</string>
-    <string name="select_membership_2" context="button to go to Paypal">PayPal Mitgliedschaft</string>
+    <string name="select_membership_2" context="button to go to Google Play">Google Play Mitgliedschaft</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">Monatlich*</string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">Jährlich*</string>
