--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -300,7 +300,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">Keahlian Pro</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">Pilih keahlian</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">Berulang bulanan atau tahunan</string>
-    <string name="select_membership_2" context="button to go to Paypal">Langganan Paypal</string>
+    <string name="select_membership_2" context="button to go to Google Play">Langganan Google Play</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">Bulanan*</string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">Tahunan*</string>
