--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -307,7 +307,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">Pro členstvo</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">Vybrať typ účtu</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">Mesačné alebo ročné obnovovanie</string>
-    <string name="select_membership_2" context="button to go to Paypal">Predplatné cez PayPal</string>
+    <string name="select_membership_2" context="button to go to Google Play">Predplatné cez Google Play</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">Mesačne</string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">Ročne*</string>
