--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -300,7 +300,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">專業版會員</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">Select membership</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">Monthly or annual recurring</string>
-    <string name="select_membership_2" context="button to go to Paypal">Paypal subscription</string>
+    <string name="select_membership_2" context="button to go to Google Play">Google Play subscription</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">Monthly*</string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">每年*</string>
