--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -300,7 +300,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">Compte Pro</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">Tria el tipus de subscripció</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">Renovació mensual o anual</string>
-    <string name="select_membership_2" context="button to go to Paypal">Subscripció amb Paypal</string>
+    <string name="select_membership_2" context="button to go to Google Play">Subscripció amb Google Play</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">Mensual*</string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">Anual</string>
