--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -307,7 +307,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">Členství Pro</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">Vyberte členství</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">Měsíční nebo roční opakování</string>
-    <string name="select_membership_2" context="button to go to Paypal">Předplatné Paypal</string>
+    <string name="select_membership_2" context="button to go to Google Play">Předplatné Google Play</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">Měsíční*</string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">Roční*</string>
