--- a/res/values-ee/strings.xml
+++ b/res/values-ee/strings.xml
@@ -300,7 +300,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">Maksustatud liige</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">Vali liikmestaatus</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">Igakuine või igaastane makse</string>
-    <string name="select_membership_2" context="button to go to Paypal">Tellimus Paypali kaudu</string>
+    <string name="select_membership_2" context="button to go to Google Play">Tellimus Google Play kaudu</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">Igakuine: </string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">Igal aastal*</string>
