--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -323,7 +323,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">Cuenta Pro</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">Seleccione plan</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">Pago Anual o Mensual</string>
-    <string name="select_membership_2" context="button to go to Paypal">Subscripción Paypal</string>
+    <string name="select_membership_2" context="button to go to Google Play">Subscripción Google Play</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">Mensual*</string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">Anual*</string>
