--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -314,7 +314,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">משתמש PRO</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">בחר מנוי</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">חיוב חודשי או שנתי</string>
-    <string name="select_membership_2" context="button to go to Paypal">הרשמה בעזרת Paypal</string>
+    <string name="select_membership_2" context="button to go to Google Play">הרשמה בעזרת Google Play</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">חודשי*</string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">שנתי*</string>
