--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -300,7 +300,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">Pro tagság</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">Előfizetés kiválasztása</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">Havi vagy éves előfizetés</string>
-    <string name="select_membership_2" context="button to go to Paypal">Paypal előfizetés</string>
+    <string name="select_membership_2" context="button to go to Google Play">Google Play előfizetés</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">Havi*</string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">Éves*</string>
