--- a/res/values-id/strings.xml
+++ b/res/values-id/strings.xml
@@ -300,7 +300,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">Keanggotaan Pro</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">Pilih membership</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">Iuran rutin perbulan atau pertahun</string>
-    <string name="select_membership_2" context="button to go to Paypal">Iuran dengan Paypal</string>
+    <string name="select_membership_2" context="button to go to Google Play">Iuran dengan Google Play</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">Perbulan*</string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">Per tahun*</string>
