--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -300,7 +300,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">プロメンバーシップ</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">メンバーシップ選択</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">月ごと又は１年ごと</string>
-    <string name="select_membership_2" context="button to go to Paypal">Paypal へ</string>
+    <string name="select_membership_2" context="button to go to Google Play">Google Play へ</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">月ごと*</string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">年間*</string>
