--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -300,7 +300,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">프로 회원권</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">회원권 선택</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">월간 또는 연간 재구독</string>
-    <string name="select_membership_2" context="button to go to Paypal">페이팔 구독</string>
+    <string name="select_membership_2" context="button to go to Google Play">구독 구글 플레이</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">월간*</string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">연간*</string>
