--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -300,7 +300,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">Pro Lidmaatschap</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">Selecteer abonnement</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">Maandelijks of jaarlijks betalen</string>
-    <string name="select_membership_2" context="button to go to Paypal">Paypal abonnement</string>
+    <string name="select_membership_2" context="button to go to Google Play">Google Play abonnement</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">Maandelijks*</string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">Jaarlijks*</string>
