--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -300,7 +300,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">Usuário PRO</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">Selecionar assinatura</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">Período mensal ou anual</string>
-    <string name="select_membership_2" context="button to go to Paypal">Assinatura pelo PayPal</string>
+    <string name="select_membership_2" context="button to go to Google Play">Assinatura pelo Google Play</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">Mensal*</string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">Anual*</string>
