--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -300,7 +300,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">Membro Pro</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">Escolhe o tipo de membro</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">Recurrente mensalmente ou anualmente</string>
-    <string name="select_membership_2" context="button to go to Paypal">Subscrição do Paypal</string>
+    <string name="select_membership_2" context="button to go to Google Play">Subscrição do Google Play</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">Mensalmente*</string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">Anualmente*</string>
