--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -307,7 +307,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">Cont de membru Pro</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">Selectează tipul contului</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">Abonament periodic lunar sau anual</string>
-    <string name="select_membership_2" context="button to go to Paypal">Abonare prin PayPal</string>
+    <string name="select_membership_2" context="button to go to Google Play">Abonare prin Google Play</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">Anual*</string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">Anual*</string>
