--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -300,7 +300,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">Premiummedlemskap</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">Välj medlemskap</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">Upprepande per månad eller år</string>
-    <string name="select_membership_2" context="button to go to Paypal">Paypal prenumeration</string>
+    <string name="select_membership_2" context="button to go to Google Play">Google Play prenumeration</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">Per månad*</string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">Årsvis*</string>
