--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -341,7 +341,7 @@
     <string name="upgrade_activity" context="title of the Upgrade screen">Pro Membership</string>
     <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">Select membership</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">Monthly or annual recurring</string>
-    <string name="select_membership_2" context="button to go to Paypal">Paypal subscription</string>
+    <string name="select_membership_2" context="button to go to Google Play">Google Play subscription</string>
     
     <string name="upgrade_per_month" context="button to decide monthly payment. The asterisk is needed">Monthly*</string>
     <string name="upgrade_per_year" context="button to decide annually payment. The asterisk is needed">Annually*</string>
@@ -436,6 +436,7 @@
     
     <string name="my_account_title" context="title of the My Account screen">Account Type:</string>
     <string name="free_account">FREE</string>
+    <string name="prolite_account" context="Not translate">Pro Lite</string>
     <string name="pro1_account" context="Not translate">Pro I</string>
     <string name="pro2_account" context="Not translate">Pro II</string>
     <string name="pro3_account" context="Not translate">Pro III</string>
