--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -230,7 +230,7 @@
     <string name="context_get_link_menu" context="Item menu option upon right click on one or multiple files.">Get link</string>
     <string name="context_manage_link_menu" context="Item menu option upon right click on one or multiple files.">Manage link</string>
     <string name="context_leave_menu" context="Item menu option upon right click on one or multiple files.">Leave</string>
-    <string name="context_clean_shares_menu" context="Item menu option upon right click on one or multiple files.">Remove share</string>
+    <string name="context_clean_shares_menu" context="Item menu option upon right click on one or multiple files.">Remove</string>
     <string name="context_remove_link_menu" context="Item menu option upon right click on one or multiple files.">Remove link</string>
     <string name="context_remove_link_warning_text" context="Warning that appears prior to remove a link of a file.">This link will not be publicly available anymore</string>
     <string name="context_rename" context="Item menu option upon right click on one or multiple files.">Rename</string>
