--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -370,7 +370,7 @@
     <string name="cam_sync_syncing" context="The upload of the user\'s photos orvideos from their specified album is in progress.">Camera Upload in progress</string>
     <string name="cam_sync_cancel_sync" context="confirmation question for cancelling the camera uploads">Do you want to cancel Camera Uploads?</string>
     <string name="settings_camera_notif_error_no_folder" context="Error message when an unavailable destination folder was selected">Destination folder is unavailable</string>
-    <string name="settings_camera_notif_title" context="title of the notification when camera upload is enabled">Uploading camera images</string>
+    <string name="settings_camera_notif_title" context="title of the notification when camera upload is enabled">Uploading files of media folders</string>
     <string name="settings_camera_notif_error" context="notification error">Camera Uploads problem</string>
     <string name="settings_camera_notif_complete" context="notification camera uploads complete">Camera Uploads complete</string>
     
